--- a/src/components/sections/section-02.html
+++ b/src/components/sections/section-02.html
@@ -3,7 +3,7 @@
     <td class="pt-[20px]"></td>
   </tr>
   <tr>   
-    <td class="px-[20px] sm:p-[0]"><x-image class="w-[560px]" imgUrl="../images/Hero Image_2X.png" href="#"></td>
+    <td class="px-[20px] sm:p-[0]"><x-image class="w-[560px]" imgUrl="../images/Hero_Image_2X.png" href="#"></td>
   </tr>
   <tr>
     <td class="text-[#005555] text-[24px] leading-[28px] font-bold pt-[30px] pl-[20px] pr-[20px] text-center">Excepteur sint occaecat cupidatat 
