--- a/src/components/sections/section-03.html
+++ b/src/components/sections/section-03.html
@@ -16,7 +16,7 @@
                 <td class="pt-[30px] bg-white w-[270px] max-w-[270px] text-center sm:w-full sm:max-w-full sm:block">
                   <table>
                     <tr>
-                      <td><x-image class="w-[100px]" imgUrl="../images/Icon_2X.png" href="#"></td>
+                      <td class="text-center"><x-image class="w-[100px]" imgUrl="../images/Icon_2X.png" href="#"></td>
                     </tr>
                     <tr>
                       <td class="text-[#005555] text-[20px] leading-[23px] font-bold pt-[20px] text-center">Nisi ut ade</td>
@@ -33,7 +33,7 @@
                 <td class="pt-[30px] bg-white w-[270px] max-w-[270px] text-center sm:w-full sm:max-w-full sm:block">
                   <table>
                     <tr>
-                      <td><x-image class="w-[100px]" imgUrl="../images/Icon_2X.png"></td>
+                      <td class="text-center"><x-image class="w-[100px]" imgUrl="../images/Icon_2X.png"></td>
                     </tr>
                     <tr>
                       <td class="text-[#005555] text-[20px] leading-[23px] font-bold pt-[20px] text-center">Duis aute irure</td>
