--- a/src/components/sections/section-04.html
+++ b/src/components/sections/section-04.html
@@ -38,7 +38,7 @@
     <td class="text-[#000000] text-[12px] leading-[14px] font-normal pl-[20px] pt-[10px] text-center">Sed do eiusmod tempor incididunt ut labore</td>
   </tr>
   <tr>
-    <td class="px-[20px] py-[20px] text-center"><x-image class="w-[110px]" imgUrl="../images/Footer Logo_2X.png" href="#"></x-image></td>
+    <td class="px-[20px] py-[20px] text-center"><x-image class="w-[110px]" imgUrl="../images/Footer_Logo_2X.png" href="#"></x-image></td>
   </tr>
   <tr>
     <td class="pt-[20px]"></td>
